<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/side_home"
            android:icon="@drawable/home"
            android:title="@string/home_page" />

        <item
            android:id="@+id/side_menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/app_settings" />

        <item
            android:id="@+id/side_menu_about"
            android:icon="@drawable/icon_about"
            android:title="@string/about_app" />
    </group>

    <item android:title="@string/second_menu">
        <menu>
            <item android:id="@+id/side_share_app"
                android:icon="@drawable/share_app"
                android:title="@string/share_this_app"/>

            <item android:id="@+id/side_feedback"
                android:icon="@drawable/feedback"
                android:title="@string/feedback"/>
        </menu>

    </item>


</menu>