<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notes_Details.EditNoteFragment">

    <TextView
        android:id="@+id/theme_textView_edit"
        style="@style/TextParam"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/TOP_margin_secondary"
        android:background="@drawable/item_note_bg"
        android:text="@string/edit_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_Theme"
        style="@style/TextParam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/START_and_END_margin_Edit"
        android:layout_marginTop="@dimen/TOP_margin"
        android:layout_marginEnd="@dimen/START_and_END_margin_Edit"
        android:autofillHints="Type Here"
        android:inputType="text"
        android:labelFor="@+id/edit_Theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme_textView_edit"
        tools:text="Theme" />

    <TextView
        android:id="@+id/description_textView_edit"
        style="@style/TextParam"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/TOP_margin_secondary"
        android:background="@drawable/item_note_bg"
        android:text="@string/edit_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_Theme" />

    <EditText
        android:id="@+id/edit_Description"
        style="@style/TextParam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/START_and_END_margin_Edit"
        android:layout_marginTop="@dimen/TOP_margin"
        android:layout_marginEnd="@dimen/START_and_END_margin_Edit"
        android:autofillHints="Description"
        android:inputType="text"
        android:labelFor="@+id/edit_Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_textView_edit"
        tools:text="Description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_button"
        style="@style/MyButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>